# esp32s3_szpi_sta

./: .gitignore  CMakeLists.txt  Kconfig  VERSION  auto.sh  build_version.conf  prj.conf  prj_no_net.conf  prj_sim.conf  sysbuild.conf  update_build_version.py
boards/: esp32c6_wave_esp32c6_hpcore.overlay  esp32s3_szpi_esp32s3_procpu.overlay  esp32s3_wave_esp32s3_procpu.overlay
socs/: esp32c6_hpcore.conf  esp32s3_procpu.conf
src/: ble_rc.c  fatfs.c  http_client.c  http_dl.c  lfs.c  main.c  rpc_route.c  rpc_route.h  rpc_send.c  sd_speed.c  sha256sum.c  sta.c  upgrade.c  wscli.c  wscli.h
sysbuild/: mcuboot.conf
